--- a/views/recipe/new.ejs
+++ b/views/recipe/new.ejs
@@ -6,8 +6,22 @@
         <title>New</title>
     </head>
     <body>
+        <nav>
+            <%-include('../partial/nav.ejs')%>
+        </nav>
         <div class="container">
-            <h1>New</h1>
+            <h1>Adding New Recipe</h1>
+            <form action="/recipes" method="POST">
+                <ul>
+                    <input type="text" name="name" placeholder="Name"/><br/>
+                    <input type="text" name="description" placeholder="Description"/><br/>
+                    <input type="text" name="img" placeholder="Img link"/><br/>
+                    <input type="number" name="serving" placeholder="Serving Size"/><br/>
+                    <input type="text" name="ingredients" placeholder="Ingredients, use commas to seperate"/><br/>
+                    <input type="text" name="directions" placeholder="Directions, use commas to seperate"/><br/>
+                    <input type="submit" value="Submit">
+                </ul>
+            </form>
         </div>
     </body>
 </html>
