--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -8,6 +8,14 @@
     <body>
         <div class="container">
             <h1>Sign Up</h1>
+            <form class="" action="/users" method="POST">
+                <label>Username:</label>
+                <input type="text" name="username" required/><br/>
+                <label>Password:</label>
+                <input type="password" name="password"/><br/>
+                <input type="submit" value="Submit"/>
+                <button class="direct" type="button" onclick="window.location.href='/products'">Back</button>
+            </form>
         </div>
     </body>
 </html>
