--- a/views/collections/soups.ejs
+++ b/views/collections/soups.ejs
@@ -14,7 +14,7 @@
 
             <% for(let i = 0; i < item.length; i++) { %>
                 <h4><%=item[i].name%></h4>
-                <a href="/recipes/<%=item[i]._id%>">
+                <a href="/recipes/<%=item[i].id%>">
                     <img src="<%=item[i].img%>" alt="">
                 </a></br>
             <% } %>
