--- a/views/recipe/new.ejs
+++ b/views/recipe/new.ejs
@@ -15,6 +15,7 @@
                 <ul>
                     <input type="text" name="name" placeholder="Name"/><br/>
                     <input type="text" name="description" placeholder="Description"/><br/>
+                    <input type="text" name="readyIn" placeholder="Cooking Time">
                     <input type="text" name="img" placeholder="Img link"/><br/>
                     <input type="number" name="serving" placeholder="Serving Size"/><br/>
                     <input type="text" name="ingredients" placeholder="Ingredients, use commas to seperate"/><br/>
