--- a/views/authors/edit.ejs
+++ b/views/authors/edit.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -11,25 +11,8 @@
         </nav>
         <div class="container">
             <h1>Editing Comment</h1>
-<<<<<<< HEAD
             <form action="/authors/<%=item.id%>?_method=PUT" method="POST">
-=======
-            <form action="/recipes/<%=item.id%>?_method=PUT" method="POST">
->>>>>>> 791b1e7982d72549024ac4d1a26167c02814bd19
-                <label>Name</label>
-                <input type="text" name="name" value="<%=item.name%>"/><br/>
-                <label>Description</label>
-                <input type="text" name="description" value="<%=item.description%>"/><br/>
-                <label>Image</label>
-                <input type="text" name="img" value="<%=item.img%>"/><br/>
-                <label>Serving Size</label>
-                <input type="number" name="serving" value="<%=item.serving%>"/><br/>
-                <label>Ingredients</label>
-                <input type="text" name="ingredients" value="<%=item.ingredients%>"/><br/>
-                <label>Directions</label>
-                <input type="text" name="directions" value="<%=item.directions%>"/><br/>
-                <input type="submit" value="Submit">
             </form>
         </div>
     </body>
-</html>
+</html> -->
