--- a/views/recipe/edit.ejs
+++ b/views/recipe/edit.ejs
@@ -11,20 +11,22 @@
         </nav>
         <div class="container">
             <h1>Editing Recipe</h1>
-            <form action="/recipes/<%=item.id%>?_method=PUT" method="POST">
-                <label>Name</label>
-                <input type="text" name="name" value="<%=item.name%>"/><br/>
-                <label>Description</label>
-                <input type="text" name="description" value="<%=item.description%>"/><br/>
-                <label>Image</label>
-                <input type="text" name="img" value="<%=item.img%>"/><br/>
-                <label>Serving Size</label>
-                <input type="number" name="serving" value="<%=item.serving%>"/><br/>
-                <label>Ingredients</label>
-                <input type="text" name="ingredients" value="<%=item.ingredients%>"/><br/>
-                <label>Directions</label>
-                <input type="text" name="directions" value="<%=item.directions%>"/><br/>
-                <input type="submit" value="Submit">
+            <form action="/authors/<%=article._id%>?_method=PUT" method="post">
+                <select name="authorId">
+                    <% for(let i = 0; i < authors.length; i++) { %>
+                        <option
+                            value="<%=authors[i]._id%>"
+                            <% if(authors[i]._id.toString() === articleAuthor._id.toString()){ %>
+                                selected
+                            <% } %>
+                            >
+                            <%=authors[i].name%>
+                        </option>
+                            <% } %>
+                            </select><br/>
+                <input type="text" name="title" value="<%=article.title%>"/><br/>
+                <textarea name="body"><%=article.body%></textarea><br/>
+                <input type="submit" value="Update Article"/>
             </form>
         </div>
     </body>
