--- a/views/collections/dessert.ejs
+++ b/views/collections/dessert.ejs
@@ -10,7 +10,7 @@
             <%-include('../partial/nav.ejs')%>
         </nav>
         <div class="container">
-            <h1>Soup Recipes</h1>
+            <h1>Desserts Recipes</h1>
 
             <% for(let i = 0; i < item.length; i++) { %>
                 <h4><%=item[i].name%></h4>
