--- a/views/collections/dessert.ejs
+++ b/views/collections/dessert.ejs
@@ -6,18 +6,21 @@
         <title>Index</title>
     </head>
     <body>
-        <nav>
-            <%-include('../partial/nav.ejs')%>
-        </nav>
         <div class="container">
+            <nav class="navbar fixed-top navbar-light bg-light">
+                <%-include('../partial/nav.ejs')%>
+            </nav>
             <h1>Desserts Recipes</h1>
-
-            <% for(let i = 0; i < item.length; i++) { %>
-                <h4><%=item[i].name%></h4>
-                <a href="/recipes/<%=item[i].id%>">
-                    <img src="<%=item[i].img%>" alt="">
-                </a></br>
-            <% } %>
+            <div class="card">
+                <% for(let i = 0; i < item.length; i++) { %>
+                <div class="card-body">
+                        <h4><%=item[i].name%></h4>
+                        <a href="/recipes/<%=item[i].id%>">
+                            <img src="<%=item[i].img%>" alt="">
+                        </a></br>
+                    <% } %>
+                </div>
+            </div>
         </div>
     </body>
 </html>
