--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,34 @@
+body {
+
+}
+
 img {
     width: 750px;
     height: 450px;
+}
+
+nav {
+    width: 100%;
+}
+
+
+.myHeaderLarge{
+  display: block;
+  text-align: center;
+}
+
+.myHeaderSmall {
+    font-weight: bolder;
+    text-align: center;
+
+}
+
+nav {
+    opacity: .8
+}
+
+.welcome {
+    background: url("https://m.media-amazon.com/images/I/81r5cCOUKoL._AC_SL1500_.jpg");
+    background-size: cover;
+    margin-top: 100px;
 }
