--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -1,15 +1,21 @@
-<a href="/recipes" class="brand-logo left">Home</a>
-<ul class="right">
-  <li><a href="/recipes/new">Add a New Recipe</a></li>
-    <% if(currentUser) { %>
-    <li>Welcome <%=currentUser.username%></li>
-    <li>
-        <form action="/sessions?_method=DELETE" method="POST">
-            <input type="submit" value="Log Out" class="btn-small red">
-        </form>
-    </li>
-    <% } else{ %>
-    <li><a href="/users/new">Sign Up</a> </li>
-    <li><a href="/sessions/new">Log In</a> </li>
-    <% } %>
-</ul>
+<div class="container-fluid">
+    <ul class="nav nav-tabs">
+        <a class="nav-link" href="/recipes" class="brand-logo left">Home</a>
+        <li class="nav-item"><a a class="nav-link" href="/recipes/new">Add a New Recipe</a></li>
+        <% if(currentUser) { %>
+        <li class="nav-item"><span class="navbar-text">Welcome <%=currentUser.username%></span></li>
+        <li class="nav-item">
+            <form action="/sessions?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-outline-danger" >Log out</button>
+            </form>
+        </li>
+        <% } else{ %>
+        <li class="nav-item"><a class="nav-link" href="/users/new">Sign Up</a> </li>
+        <li class="nav-item"><a class="nav-link" href="/sessions/new">Log In</a> </li>
+        <% } %>
+        <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+      </form>
+    </ul>
+</div>
