--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -14,7 +14,7 @@
         <li class="nav-item"><a class="nav-link" href="/sessions/new">Log In</a> </li>
         <% } %>
         <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" onkeyup="search_name()" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary" type="submit">Search</button>
       </form>
     </ul>
