--- a/views/collections/soups.ejs
+++ b/views/collections/soups.ejs
@@ -16,7 +16,7 @@
                     <div class="card-body">
                         <h4><%=item[i].name%></h4>
                         <a href="/recipes/<%=item[i].id%>">
-                            <img src="<%=item[i].img%>" alt="">
+                            <img class="img-fluid" src="<%=item[i].img%>" alt="">
                         </a></br>
                     </div>
                 <% } %>
