--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -6,7 +6,7 @@
         <title>Users</title>
     </head>
     <body>
-        <div class="container">
+        <div class="container text-center">
             <h1>Sign Up</h1>
             <form class="" action="/users" method="POST">
                 <label>Username:</label>
