--- a/views/recipe/home.ejs
+++ b/views/recipe/home.ejs
@@ -16,22 +16,22 @@
             </div>
             <section class="collections text-center">
                 <div class="airfryer">
-                    <img src="https://images-gmi-pmc.edge-generalmills.com/c45035fe-43e0-4a96-a315-2c3162d61794.jpg" alt="">
+                    <img class="img-fluid" src="https://images-gmi-pmc.edge-generalmills.com/c45035fe-43e0-4a96-a315-2c3162d61794.jpg" alt="">
                     <h2>Airfryer</h2>
                     <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.location.href='/recipes/airfryer'">See Recipes</button>
                 </div>
                 <div class="breakfast">
-                    <img src="https://madeitateitlovedit.com/wp-content/uploads/2020/06/waffles-11-1020x600.jpg" alt="">
+                    <img class="img-fluid" src="https://madeitateitlovedit.com/wp-content/uploads/2020/06/waffles-11-1020x600.jpg" alt="">
                     <h2>Breakfast</h2>
                     <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.location.href='/recipes/breakfast'">See Recipes</button>
                 </div>
                 <div class="soups">
-                    <img src="https://media.istockphoto.com/photos/variety-of-garnished-soups-in-colorful-bowls-picture-id595734992?k=6&m=595734992&s=612x612&w=0&h=9MhW6agcyDRIAGpdFLVhCxitjeke1OxyC09bL21Umw8=" alt="">
+                    <img class="img-fluid" src="https://media.istockphoto.com/photos/variety-of-garnished-soups-in-colorful-bowls-picture-id595734992?k=6&m=595734992&s=612x612&w=0&h=9MhW6agcyDRIAGpdFLVhCxitjeke1OxyC09bL21Umw8=" alt="">
                     <h2>Soups</h2>
                     <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.location.href='/recipes/soups'">See Recipes</button>
                 </div>
                 <div class="dessert">
-                    <img src="https://static.toiimg.com/photo/75508582.cms" alt="">
+                    <img class="img-fluid" src="https://static.toiimg.com/photo/75508582.cms" alt="">
                     <h2>Dessert</h2>
                     <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.location.href='/recipes/dessert'">See Recipes</button>
                 </div>
