--- a/views/recipe/show.ejs
+++ b/views/recipe/show.ejs
@@ -12,7 +12,7 @@
             </nav>
             <div class="row align-items-start">
                 <h2><%=item.name%></h2>
-                <img src="<%=item.img%>" alt="">
+                <img class="img-fluid" src="<%=item.img%>" alt="">
                 <div class="col">
                     <h5>Description</h5>
                     <p><%=item.description%></p>
