--- a/views/recipe/new.ejs
+++ b/views/recipe/new.ejs
@@ -27,8 +27,8 @@
                     <input type="number" name="serving" placeholder="Serving Size"/><br/>
                     <input type="text" name="ingredients" placeholder="Ingredients, use commas to seperate"/><br/>
                     <input type="text" name="directions" placeholder="Directions, use commas to seperate"/><br/>
-                    <input type="submit" value="Submit">
-                    <button type="button" onclick="window.history.back()">Previous Page</button>
+                    <button class="btn btn-outline-success btn-lg" type="submit">Submit</button>
+                    <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.history.back()">Previous Page</button>
                 </ul>
             </form>
         </div>
