--- a/views/recipe/edit.ejs
+++ b/views/recipe/edit.ejs
@@ -33,8 +33,8 @@
                 <input type="text" name="ingredients" value="<%=item.ingredients%>"/><br/>
                 <label>Directions</label>
                 <input type="text" name="directions" value="<%=item.directions%>"/><br/>
-                <input type="submit" value="Submit">
-                <button type="button" onclick="window.history.back()">Previous Page</button>
+                <button class="btn btn-outline-success btn-lg" type="submit">Submit</button>
+                <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.history.back()">Previous Page</button>
             </form>
 
         </div>
