--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -14,7 +14,8 @@
                 <label>Password:</label>
                 <input type="password" name="password"/><br/>
                 <input type="submit" value="Submit"/>
-                <button class="direct" type="button" onclick="window.location.href='/products'">Back</button>
+                <button class="btn btn-outline-primary btn-lg" type="submit">Submit</button>
+                <button class="btn btn-outline-primary btn-lg" type="button" onclick="window.history.back()">Back</button>
             </form>
         </div>
     </body>
