--- a/views/recipe/edit.ejs
+++ b/views/recipe/edit.ejs
@@ -13,7 +13,7 @@
             <h1>Editing Recipe</h1>
             <form action="/recipes/<%=item.id%>?_method=PUT" method="POST">
                 <label for="category">Choose a Category:</label>
-                <select form="whatever" name="category" id="category">
+                <select name="category" id="category">
                   <option value="airfryer">Airfryer</option>
                   <option value="breakfast">Breakfast</option>
                   <option value="soups">Soups</option>
